<resources>
    <string name="app_name">Mob Courses App</string>
    <string name="title_activity_catalogue">Catalog</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_mycourses">My courses</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_drawer_menu">drawer_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">General</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_help">Help</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_certificates">Certificates</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_schools">Schools</string>
    <string name="menu_ext_links">Useful links</string>
    <string name="input_error_password_length">Password too short</string>
    <string name="input_error_phone_invalid">Phone format invalid</string>
    <string name="registration_success">Successfully Registered</string>
    <string name="input_error_name">Please provide your Full Name</string>
    <string name="input_error_email">Please provide your Email</string>
    <string name="input_error_email_invalid">Invalid email address</string>
    <string name="input_error_password">Set your password</string>
    <string name="input_error_phone">Provide your Phone number</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_with_google">Continue with Google</string>
    <string name="login_with_fbk">Continue with Facebook</string>
    <string name="facebook_application_id" translatable="false">2353216644937801</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2353216644937801</string>
    <string name="pref_file">com.finalyear.preference_file</string>
    <string name="pref_login_status">com.finalyear.preference_login_status</string>
    <string name="pref_user_name">com.finalyear.preference_user_name</string>
</resources>
